new ibict blockchain configured #10

--- a/app/config.ini
+++ b/app/config.ini
@@ -1,6 +1,6 @@
 [base]
-blockchain_net   = dark-local
-; blockchain_net   = dark-virtualenv
+;blockchain_net   = dark-local
+blockchain_net   = dark-ibict
 dapp_dir = dARK_dapp
 
 
