--- a/.github/workflows/python_anywhere_deploy.yaml
+++ b/.github/workflows/python_anywhere_deploy.yaml
@@ -11,6 +11,6 @@ jobs:
         uses: jensvog/pythonanywhere-webapp-reload-action@v1
         with:
           host: ' hyperdrive.pythonanywhere.com'
-          username: {{ variables.PYAW_USERNAME }}
-          api-token: {{ secrets.PYAW_API_TOKEN }}
-          domain-name: {{ variables.PYAW_DOMAIN_NAME }}
+          username: ${{ variables.PYAW_USERNAME }}
+          api-token: ${{ secrets.PYAW_API_TOKEN }}
+          domain-name: ${{ variables.PYAW_DOMAIN_NAME }}
