--- a/requirements.txt
+++ b/requirements.txt
@@ -19,5 +19,10 @@ gunicorn
 # recolocar quando alterar o web3
 # uvicorn[standard]==0.21.1
 
+# tests
+pytest~=7.1.3
+# requests==2.28.1
+pytest-env==0.6.2
+
 # dark
 dark-gateway==0.1.0
