--- a/tests/unit/pytest.ini
+++ b/tests/unit/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]  
 env =  
     D:API_KEY=<YOUR_API_KEY>
-    D:API_URL=http://<YOUR_IP>:8080/core
+    D:API_URL=http://10.220.0.15:8080/core
