removing docker compose

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     #   - application
     #   - p2w
     build: 
-      context: ./
+      context: ../
       dockerfile: ./docker/Dockerfile
     restart: always
     environment:
