--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -6,8 +6,7 @@ on:
   #     - develop
 jobs:
   build:
-    # runs-on: ubuntu-latest
-    runs-on: aws-ibict-a
+    runs-on: ubuntu-latest
     
     steps:
       - name: Start AWS VMs
