--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -30,24 +30,24 @@ jobs:
       #     EC2_HOST=`aws ec2 describe-instances --instance-ids i-0aea1f015a712bab7 --query 'Reservations[*].Instances[*].PublicDnsName' --output text`
       #     echo "EC2_HOSTNAME=$EC2_HOST" >> $GITHUB_ENV
 
-      - name: Start EC2 Services
-        env:
-          #AWS VARS
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
-          #SSH VARS
-          SSH_PRIVATE_KEY: ${{ secrets.AWS_CEOIS_KEY }}
-          USER_NAME : ${{ secrets.AWS_CEOIS_USER  }}
+      # - name: Start EC2 Services
+      #   env:
+      #     #AWS VARS
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
+      #     #SSH VARS
+      #     SSH_PRIVATE_KEY: ${{ secrets.AWS_CEOIS_KEY }}
+      #     USER_NAME : ${{ secrets.AWS_CEOIS_USER  }}
 
-        run: |
-          echo "$SSH_PRIVATE_KEY" > private_key && chmod 600 private_key
-          EC2_HOST=`aws ec2 describe-instances --instance-ids i-0aea1f015a712bab7 --query 'Reservations[*].Instances[*].PublicDnsName' --output text`
-          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${EC2_HOST} '
+      #   run: |
+      #     echo "$SSH_PRIVATE_KEY" > private_key && chmod 600 private_key
+      #     EC2_HOST=`aws ec2 describe-instances --instance-ids i-0aea1f015a712bab7 --query 'Reservations[*].Instances[*].PublicDnsName' --output text`
+      #     ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${EC2_HOST} '
           
-            # Initialization Script
-            cd /home/ubuntu/actions-runner
-            # sudo ./svc.sh start
-            sudo ./svc.sh status
-            sleep 5
+      #       # Initialization Script
+      #       cd /home/ubuntu/actions-runner
+      #       # sudo ./svc.sh start
+      #       sudo ./svc.sh status
+      #       sleep 5
 
