--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ py-solc-x >= 1.1.1
 # webservice
 flask
 flask-sqlalchemy==3.1.1
+psycopg2-binary==2.9.9
 flask_jwt_extended
 gunicorn
 # recolocar quando alterar o web3
