--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ py-solc-x >= 1.1.1
 flask
 flask-sqlalchemy==3.1.1
 psycopg2-binary==2.9.9
+Flask-Bcrypt==1.0.1
 flask_jwt_extended
 gunicorn
 # recolocar quando alterar o web3
