--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,9 @@ flask
 flask-sqlalchemy==3.1.1
 psycopg2-binary==2.9.9
 Flask-Bcrypt==1.0.1
+Flask-Migrate==4.0.5
+flask-marshmallow==0.15.0
+marshmallow-sqlalchemy==0.29.0
 flask_jwt_extended
 gunicorn
 # recolocar quando alterar o web3
