--- a/requirements.txt
+++ b/requirements.txt
@@ -5,29 +5,22 @@ ipywidgets
 jupyter
 nbconvert>=6.5.0
 tqdm
-ijson>=3.1.4
+ijson>=3.1.4      
 
 # pip install web3 --only-binary :all:
-web3==5.29.0
+web3==6.19.0
 py-solc-x >= 1.1.1
 
 # webservice
 flask
-flask-sqlalchemy==3.1.1
-psycopg2-binary==2.9.9
-Flask-Bcrypt==1.0.1
-Flask-Migrate==4.0.5
-flask-marshmallow==0.15.0
-marshmallow-sqlalchemy==0.29.0
-flask_jwt_extended==4.5.3
+flask-sqlalchemy
+flask_jwt_extended
 gunicorn
+gevent
 # recolocar quando alterar o web3
 # uvicorn[standard]==0.21.1
 
-# tests
-pytest~=7.1.3
-# requests==2.28.1
-pytest-env==0.6.2
-
 # dark
-dark-gateway==0.1.0
+dark-gateway==0.1.6
+# load variables
+python-dotenv
