Update load_api.py with account validation and new update endpoint; add old app files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,35 @@ cython_debug/
 #.idea/
 config/config.ini
 config/deployed_contracts.ini
+app_old/api_server.py
+app_old/config.ini
+app_old/database_methods.py
+app_old/deployed_contracts.ini
+app_old/import_csv.py
+app_old/instance_app.py
+app_old/model.py
+app_old/serealize.py
+app_old/api/__init__.py
+app_old/api/core_api.py
+app_old/api/query_api.py
+app_old/api/user_api.py
+app_old/api/util.py
+app_old/config/BlockchainManager.py
+app_old/database/__init__.py
+app_old/database/users.csv
+app_old/database/variables_database.py
+app_old/migrations/alembic.ini
+app_old/migrations/env.py
+app_old/migrations/README
+app_old/migrations/script.py.mako
+app_old/migrations/versions/2da74c140ea0_.py
+app_old/static/dark-logo.png
+app_old/templates/base.html
+app_old/templates/home.html
+app_old/templates/wallet.html
+app_old/util/asynchronus.py
+app_old/util/auth_middleware.py
+app_old/util/config_manager.py
+app_old/util/responses.py
+app_old/util/synchronous.py
+app_old/util/validation.py
